# bumsBot

./: .env  .gitignore  BumsBotSh.sh  README.md  env.py  main.py  pyproject.toml
bums/: bums.py  endpoints.py  models.py
telegram/: client.py  platform.py
utils/: dt.py  loggy.py
