[project]
name = "bumsbot"
version = "0.1.0"
description = "A bot that automates tasks such as daily sign-ins, tapping, and processing upgrades."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fake-useragent>=1.5.1",
    "httpx>=0.27.2",
    "humanize>=4.11.0",
    "loguru>=0.7.2",
    "pydantic>=2.9.2",
    "pyenvloadermeta>=1.0.2",
    "pyrogram>=2.0.106",
    "rich>=13.9.4",
    "tgcrypto>=1.2.5",
    "timecalculator>=1.2.1",
]
